--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+body {
+  background-color: whitesmoke;
+  color: whitesmoke;
+  display: flex;
+  overflow-x: hidden;
+  justify-content: center;
+  align-items: center;
+}
+
 .App {
   text-align: center;
 }
