--- a/src/stylesheets/TopBar.css
+++ b/src/stylesheets/TopBar.css
@@ -1,5 +1,5 @@
 .TopBar {
-    background-color: rgb(189, 158, 119);
+    background-color: rgb(232, 121, 179);
     display: flex;
     border: 2px solid none;
     border-radius: 55px;
@@ -14,6 +14,7 @@
     border-top-left-radius: 0;
     border-top-right-radius: 0;
     justify-content: center;
+    transition: all 0.2s ease;
     flex-direction: column;
     align-items: center;
 }
@@ -41,6 +42,7 @@
     margin-top: -40%;
     /* Create a parallax effect */
     background-attachment: fixed;
+    transition: all 0.2s ease;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
