--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,19 @@ body {
   color: #61dafb;
 }
 
+body::-webkit-scrollbar {
+  width: 1em;
+}
+ 
+body::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+ 
+body::-webkit-scrollbar-thumb {
+  background-color: rgb(0, 0, 0);
+  outline: 1px solid rgb(0, 0, 0);
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
