--- a/src/App.css
+++ b/src/App.css
@@ -73,7 +73,6 @@ body {
   background-color: white;
   border: 5px solid black;
   color: black;
-  cursor: pointer;
 }
 
 #text2,
@@ -88,7 +87,6 @@ body {
   background-color: black;
   border: 5px solid white;
   color: white;
-  cursor: pointer;
 }
 
 .falling-text-flex {
@@ -96,6 +94,42 @@ body {
   justify-content: space-around;
   flex-direction: column;
   align-items: center;
+}
+
+#img1 {
+  background-image: url("./assets/cake.jpg");
+}
+
+#img1, #img2 {
+  align-self: baseline;
+}
+
+#img3, #img4 {
+  align-self: end;
+}
+
+#img2 {
+  background-image: url("./assets/sugarcookie.jpg");
+}
+
+#img3 {
+  background-image: url("./assets/macarons2.jpg");
+}
+
+#img4 {
+  background-image: url("./assets/heartmacarons3.jpg");
+}
+
+.falling-img {
+  border-radius: 50px;
+  display: inline;  
+  border: 1px solid;
+  background-repeat: no-repeat;
+  width: 500px;
+  min-width: 500px;
+  min-height: 500px;
+  background-size: contain;
+  height: 500px;
 }
 
 body::-webkit-scrollbar {
