--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,6 @@ body {
 .spinning-back {
   width: 100vw;
   height: 100vh;
-  
 }
 
 
@@ -91,45 +90,88 @@ body {
 
 .falling-text-flex {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   flex-direction: column;
   align-items: center;
 }
 
-#img1 {
-  background-image: url("./assets/cake.jpg");
+.footer {
+  width: 100%;
+  background-color: black;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 15px;
+  height: 50px
 }
+
+.socials {
+  margin-left: 10px;
+  transition: 0.3s ease all;
+  width: 2em;
+}
+
+.socials:hover {
+  cursor: pointer;
+  border: 5px solid rgb(232, 121, 179);
+  border-radius: 5px;
+}
+
+.middle {
+  padding: 0;
+  border: 0;
+  color: black;
+  font-size: 3em;
+  margin-top: 50px;
+}
+
+.falling-text-flex-img {
+  background-color: rgb(232, 121, 179);
+  display: flex;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  justify-content: space-between;
+  margin-bottom: 0;
+  flex-direction: row;
+  align-items: center;
+}
+
+.first-flex {
+  margin-top: 500px;
+  background-color: whitesmoke;
+}
+
 
 #img1, #img2 {
   align-self: baseline;
+  justify-self: end;
+}
+
+#img1:hover,
+#img2:hover {
+  background-color: rgb(232, 121, 179);
+  padding: 25px;
 }
 
 #img3, #img4 {
   align-self: end;
-}
-
-#img2 {
-  background-image: url("./assets/sugarcookie.jpg");
-}
-
-#img3 {
-  background-image: url("./assets/macarons2.jpg");
-}
-
-#img4 {
-  background-image: url("./assets/heartmacarons3.jpg");
+  justify-self: start;
 }
 
 .falling-img {
   border-radius: 50px;
-  display: inline;  
-  border: 1px solid;
-  background-repeat: no-repeat;
-  width: 500px;
-  min-width: 500px;
-  min-height: 500px;
-  background-size: contain;
-  height: 500px;
+  width: 25%;
+  line-height: 150px;
+  display: inline;
+  font-size: 2.5em;
+  transition: 0.3s all ease;
+  background-repeat: none;
+}
+
+.falling-img:hover {
+  background-color: whitesmoke;
+  padding: 25px;
 }
 
 body::-webkit-scrollbar {
@@ -153,3 +195,32 @@ body::-webkit-scrollbar-thumb {
     transform: rotate(360deg);
   }
 }
+
+/* Media query for screens up to 767px (typical phones) */
+@media screen and (max-width: 767px) {
+  /* Styles for phones and smaller screens */
+  h2 {
+    font-size: 2em !important;
+  }
+  
+  .macaron-img {
+    width: 25em !important;
+  }
+  
+  .falling-img {
+    width: 50%;
+  }
+  
+  .falling-text {
+    line-height: 30px;
+    width: 25%;
+    font-size: 1.5em;
+  }
+  
+  
+  
+  .TopBar {
+    width: 100% !important;
+  }
+}
+
