--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,28 @@ body {
   text-align: center;
 }
 
+.center {
+  align-self: center !important;
+  justify-self: center !important;
+}
+
+.new {
+  background-color: whitesmoke !important;
+}
+
+.menu-header {
+  font-size: 2em;
+}
+
+.falling-text-flex-menu {
+  background-color: rgb(232, 121, 179);
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -37,9 +59,15 @@ body {
   color: #61dafb;
 }
 
+.tag-line {
+  font-size: 2em;
+  color: black;
+}
+
 .spinning-back {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  margin-top: 50px;
+  height: 100%;
 }
 
 
@@ -171,12 +199,13 @@ body {
 
 .spinning-back-contact {
   display: flex;
-  margin-top: 25%;
+  margin-top: 15%;
+  margin-bottom: 25%;
   color: black;
   justify-content: center;
   align-items: center;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   flex-direction: column;
 }
 
@@ -186,7 +215,7 @@ body {
 }
 
 body::-webkit-scrollbar {
-  width: 1em;
+  width: 1.5em;
 }
  
 body::-webkit-scrollbar-track {
