--- a/src/stylesheets/TopBar.css
+++ b/src/stylesheets/TopBar.css
@@ -5,6 +5,7 @@
     display: flex;
     border: 2px solid none;
     border-radius: 55px;
+    margin-top: -100px;
     border-top: 0px;
     width: 100vw;
     font-family: 'Dancing Script', cursive;
