--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,12 @@ html {
   padding: 50px;
 }
 
+#baker-desc {
+  width: 50%;
+  font-weight: bold;
+  font-size: large;
+}
+
 #top {
   margin: 0;
 }
